--- a/index2.html
+++ b/index2.html
@@ -24,12 +24,12 @@
 
     if ((sh < 8 && age > 40) || (sh < 6  && age <= 40)) {
 
-    console.log('Sleep Deprived');}
+    document.write('Sleep Deprived');}
     else {
-    console.log('Healthy');
+    document.write('Healthy');
 }
     if (region.toLowerCase() === "america"){
-    console.log("87% of highschool students in America are sleep deprived")
+    document.write("87% of highschool students in America are sleep deprived")
 }
 
 }
